// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create program should post a program: Create program response for program: DRA Joint Response 2023 Ethiopia - Dorcas 1`] = `
{
  "aboutProgram": {
    "en": "DRA Joint Response Ethiopia 2023 - Dorcas",
  },
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "ETB",
  "deprecatedCustomDataKeys": [],
  "description": {
    "en": "",
  },
  "distributionDuration": 3,
  "distributionFrequency": "month",
  "editableAttributes": [
    {
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "type": "text",
    },
    {
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "type": "dropdown",
    },
    {
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "type": "numeric",
    },
    {
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "type": "text",
    },
    {
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "type": "tel",
    },
    {
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "type": "numeric",
    },
  ],
  "enableMaxPayments": true,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "age",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "bankAccountNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "financialServiceProvider",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "fullName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "gender",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemale",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleDisabilityOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleDisabilityUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyFemaleUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMale",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleDisabilityOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleDisabilityUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleOver18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "howManyMaleUnder18",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "idNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "registrationCreatedDate",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "totalFamilyMembers",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "failedPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "maxPayments",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "notYetSentPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCountRemaining",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "successPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "waitingPayment",
        },
      ],
      "group": "payments",
    },
  ],
  "financialServiceProviders": [
    {
      "displayName": {
        "en": "Commercial Bank of Ethiopia",
      },
      "fsp": "Commercial-bank-ethiopia",
      "hasReconciliation": false,
      "id": 9,
      "integrationType": "api",
      "notifyOnTransaction": false,
      "questions": [
        {
          "answerType": "text",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 9,
          "id": 17,
          "label": {
            "en": "Bank Account Number",
          },
          "name": "bankAccountNumber",
          "options": null,
          "pattern": ".+",
          "placeholder": {
            "en": "Please type your bank account number",
          },
          "showInPeopleAffectedTable": true,
        },
      ],
    },
  ],
  "fixedTransferValue": 7000,
  "fullnameNamingConvention": [
    "fullName",
  ],
  "id": 5,
  "languages": [
    "en",
    "et_AM",
  ],
  "location": "Ethiopia",
  "monitoringDashboardUrl": null,
  "ngo": "Dorcas",
  "paTableAttributes": [
    {
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Bank Account Number",
      },
      "name": "bankAccountNumber",
      "questionType": "fspQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "questionType": "programQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "questionType": "programQuestion",
      "type": "dropdown",
    },
    {
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "questionType": "programQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "questionType": "programQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "questionType": "programQuestion",
      "type": "tel",
    },
    {
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "questionType": "programQuestion",
      "type": "numeric",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programCustomAttributes": [],
  "programQuestions": [
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 8,
      "label": {
        "en": "Age",
        "et_AM": "እድሜ",
      },
      "name": "age",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "text",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 5,
      "label": {
        "en": "Name",
        "et_AM": "ስም",
      },
      "name": "fullName",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "dropdown",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 9,
      "label": {
        "en": "Gender",
        "et_AM": "ጾታ",
      },
      "name": "gender",
      "options": [
        {
          "label": {
            "en": "Male",
            "et_AM": "ወንድ",
          },
          "option": "male",
        },
        {
          "label": {
            "en": "Female",
            "et_AM": "ሴት",
          },
          "option": "female",
        },
      ],
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 10,
      "label": {
        "en": "How many female?",
        "et_AM": "ሴት አባላት",
      },
      "name": "howManyFemale",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 19,
      "label": {
        "en": "Female with disability over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityOver18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 17,
      "label": {
        "en": "Female with disability under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyFemaleDisabilityUnder18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 15,
      "label": {
        "en": "Female over 18",
        "et_AM": "ሴት ከ18 ዓመት በላይ",
      },
      "name": "howManyFemaleOver18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 13,
      "label": {
        "en": "Female under 18",
        "et_AM": "ሴት ከ18 ዓመት በታች",
      },
      "name": "howManyFemaleUnder18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 11,
      "label": {
        "en": "How many male?",
        "et_AM": "ወንድ አባላት",
      },
      "name": "howManyMale",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 20,
      "label": {
        "en": "Male with disability over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityOver18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 18,
      "label": {
        "en": "Male with disability under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች አካል ጉዳተኛ",
      },
      "name": "howManyMaleDisabilityUnder18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 16,
      "label": {
        "en": "Male over 18",
        "et_AM": "ወንድ ከ18 ዓመት በላይ",
      },
      "name": "howManyMaleOver18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 14,
      "label": {
        "en": "Male under 18",
        "et_AM": "ወንድ ከ18 ዓመት በታች",
      },
      "name": "howManyMaleUnder18",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "text",
      "duplicateCheck": true,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 7,
      "label": {
        "en": "ID Card number",
        "et_AM": "የመታውቂያ ቁጥር",
      },
      "name": "idNumber",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "tel",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 6,
      "label": {
        "en": "Phone number",
        "et_AM": "ስልክ ቁጥር",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
    {
      "answerType": "numeric",
      "duplicateCheck": false,
      "editableInPortal": true,
      "export": [
        "all-people-affected",
        "included",
      ],
      "id": 12,
      "label": {
        "en": "Total family members",
        "et_AM": "በቤተሰብዎ ውስጥ ያሉት አባላት",
      },
      "name": "totalFamilyMembers",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": null,
      "programId": 5,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
  ],
  "published": true,
  "targetNrRegistrations": 250,
  "titlePortal": {
    "en": "DRA Joint Response 2023 Ethiopia - Dorcas",
    "et_AM": "የዲአርኤየጋራ ምላሽ 2023 ኢትዮጵያ - ዶርካስ።",
  },
  "tryWhatsAppFirst": false,
  "validation": false,
}
`;

exports[`Create program should post a program: Create program response for program: NLRC OCW program 1`] = `
{
  "aboutProgram": {
    "en": "This is the OCW program.",
  },
  "allowEmptyPhoneNumber": false,
  "budget": null,
  "currency": "EUR",
  "deprecatedCustomDataKeys": [],
  "description": {
    "en": "",
  },
  "distributionDuration": 46,
  "distributionFrequency": "2-weeks",
  "editableAttributes": [
    {
      "label": {
        "en": "First name",
      },
      "name": "firstName",
      "type": "text",
    },
    {
      "label": {
        "en": "Last name",
      },
      "name": "lastName",
      "type": "text",
    },
  ],
  "enableMaxPayments": false,
  "enableScope": false,
  "filterableAttributes": [
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "lastMessageStatus",
        },
      ],
      "group": "messages",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressCity",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressHouseNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressHouseNumberAddition",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressPostalCode",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "addressStreet",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "financialServiceProvider",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "firstName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "inclusionScore",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "lastName",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentAmountMultiplier",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "personAffectedSequence",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "phoneNumber",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "preferredLanguage",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "referenceId",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "registrationCreatedDate",
        },
        {
          "allowedOperators": [
            "$eq",
            "$in",
            "$ilike",
            "$null",
          ],
          "isInteger": false,
          "name": "whatsappPhoneNumber",
        },
      ],
      "group": "paAttributes",
    },
    {
      "filters": [
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "failedPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "notYetSentPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "paymentCount",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "successPayment",
        },
        {
          "allowedOperators": [
            "$eq",
            "$null",
          ],
          "isInteger": true,
          "name": "waitingPayment",
        },
      ],
      "group": "payments",
    },
  ],
  "financialServiceProviders": [
    {
      "displayName": {
        "en": "Visa debit card",
      },
      "fsp": "Intersolve-visa",
      "hasReconciliation": false,
      "id": 3,
      "integrationType": "api",
      "notifyOnTransaction": true,
      "questions": [
        {
          "answerType": "text",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 6,
          "label": {
            "en": "Address city",
          },
          "name": "addressCity",
          "options": null,
          "pattern": ".+",
          "placeholder": null,
          "showInPeopleAffectedTable": false,
        },
        {
          "answerType": "numeric",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 3,
          "label": {
            "en": "Address house number",
          },
          "name": "addressHouseNumber",
          "options": null,
          "pattern": null,
          "placeholder": null,
          "showInPeopleAffectedTable": false,
        },
        {
          "answerType": "text",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 4,
          "label": {
            "en": "Address house number addition",
          },
          "name": "addressHouseNumberAddition",
          "options": null,
          "pattern": null,
          "placeholder": null,
          "showInPeopleAffectedTable": false,
        },
        {
          "answerType": "text",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 5,
          "label": {
            "en": "Address postal code",
          },
          "name": "addressPostalCode",
          "options": null,
          "pattern": ".+",
          "placeholder": null,
          "showInPeopleAffectedTable": false,
        },
        {
          "answerType": "text",
          "duplicateCheck": false,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 2,
          "label": {
            "en": "Address street",
          },
          "name": "addressStreet",
          "options": null,
          "pattern": ".+",
          "placeholder": null,
          "showInPeopleAffectedTable": false,
        },
        {
          "answerType": "tel",
          "duplicateCheck": true,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 3,
          "id": 7,
          "label": {
            "en": "WhatsApp Nr.",
          },
          "name": "whatsappPhoneNumber",
          "options": null,
          "pattern": null,
          "placeholder": {
            "ar": "00 00 00 00 0 00+",
            "en": "+00 0 00 00 00 00",
          },
          "showInPeopleAffectedTable": false,
        },
      ],
    },
    {
      "displayName": {
        "en": "Albert Heijn voucher WhatsApp",
      },
      "fsp": "Intersolve-voucher-whatsapp",
      "hasReconciliation": false,
      "id": 1,
      "integrationType": "api",
      "notifyOnTransaction": false,
      "questions": [
        {
          "answerType": "tel",
          "duplicateCheck": true,
          "export": [
            "all-people-affected",
            "included",
          ],
          "fspId": 1,
          "id": 1,
          "label": {
            "en": "WhatsApp Nr.",
          },
          "name": "whatsappPhoneNumber",
          "options": null,
          "pattern": null,
          "placeholder": {
            "ar": "00 00 00 00 0 00+",
            "en": "+00 0 00 00 00 00",
          },
          "showInPeopleAffectedTable": true,
        },
      ],
    },
  ],
  "fixedTransferValue": 25,
  "fullnameNamingConvention": [
    "firstName",
    "lastName",
  ],
  "id": 4,
  "languages": [
    "en",
    "nl",
    "ar",
    "tr",
  ],
  "location": "Nederland",
  "monitoringDashboardUrl": "https://app.powerbi.com/view?r=eyJrIjoiNDkxN2Q1NmEtOWIxOC00ZTYyLTkxMTMtYmI3MmE4YTVkMTE2IiwidCI6ImEyYjUzYmU1LTczNGUtNGU2Yy1hYjBkLWQxODRmNjBmZDkxNyIsImMiOjh9",
  "ngo": "NLRC",
  "paTableAttributes": [
    {
      "label": {
        "en": "Address city",
      },
      "name": "addressCity",
      "questionType": "fspQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Address house number",
      },
      "name": "addressHouseNumber",
      "questionType": "fspQuestion",
      "type": "numeric",
    },
    {
      "label": {
        "en": "Address house number addition",
      },
      "name": "addressHouseNumberAddition",
      "questionType": "fspQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Address postal code",
      },
      "name": "addressPostalCode",
      "questionType": "fspQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "Address street",
      },
      "name": "addressStreet",
      "questionType": "fspQuestion",
      "type": "text",
    },
    {
      "label": {
        "en": "First name",
      },
      "name": "firstName",
      "questionType": "programCustomAttribute",
      "type": "text",
    },
    {
      "label": {
        "en": "Last name",
      },
      "name": "lastName",
      "questionType": "programCustomAttribute",
      "type": "text",
    },
    {
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "questionType": "programQuestion",
      "type": "tel",
    },
    {
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "questionType": "fspQuestion",
      "type": "tel",
    },
    {
      "label": {
        "en": "WhatsApp Nr.",
      },
      "name": "whatsappPhoneNumber",
      "questionType": "fspQuestion",
      "type": "tel",
    },
  ],
  "paymentAmountMultiplierFormula": null,
  "programCustomAttributes": [
    {
      "duplicateCheck": false,
      "id": 4,
      "label": {
        "en": "First name",
      },
      "name": "firstName",
      "programId": 4,
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
    {
      "duplicateCheck": false,
      "id": 5,
      "label": {
        "en": "Last name",
      },
      "name": "lastName",
      "programId": 4,
      "showInPeopleAffectedTable": false,
      "type": "text",
    },
  ],
  "programQuestions": [
    {
      "answerType": "tel",
      "duplicateCheck": true,
      "editableInPortal": false,
      "export": [],
      "id": 4,
      "label": {
        "en": "Phone Number",
      },
      "name": "phoneNumber",
      "options": null,
      "pattern": null,
      "persistence": true,
      "placeholder": {
        "en": "+31 6 00 00 00 00",
      },
      "programId": 4,
      "questionType": "standard",
      "scoring": {},
      "showInPeopleAffectedTable": false,
    },
  ],
  "published": true,
  "targetNrRegistrations": 100000,
  "titlePortal": {
    "en": "NLRC OCW program",
  },
  "tryWhatsAppFirst": true,
  "validation": false,
}
`;
